--- a/AutoRental/Views/Home/Index.cshtml
+++ b/AutoRental/Views/Home/Index.cshtml
@@ -1,3 +1,10 @@
+@if (ViewBag.ErrorMessage != null)
+{	
+	<script>
+		alert('@ViewBag.ErrorMessage');
+	</script>
+}
+
 <!DOCTYPE html>
 <html lang="en">
 
