--- a/AutoRental/Views/Home/Index.cshtml
+++ b/AutoRental/Views/Home/Index.cshtml
@@ -183,7 +183,7 @@
 							@foreach (var auto in Model.Auto)
 							{
 								<form method="post" action="@Url.Action("Delete", "Home", FormMethod.Post)">
-									<input type="hidden" name="idAuto" value="@auto.id_auto" />
+									<input type="hidden" name="id_auto" value="@auto.id_auto" />
 									<button type="submit" class="btn btn-danger" onclick="return confirm('Are you sure do you want to delete this auto?');">Delete</button>
 								</form>
 							}
